# MxP-JXPAMG

./: BEIDOUBLAS_INTEGRATION.md  JXPAMG_ACCELERATOR_INTEGRATION.md  ahi_readme.md  build.sh  check2.c  exp.c  exp2.c  exp_data.csv  exp_robust.c  final_test.c  fix_all.py  fix_cleanup.py  fix_doc_perf.py  fix_exit.py  fix_header.py  fix_hybrid.py  fix_hybrid2.py  fix_lines.py  fix_more.py  fix_more2.py  fix_more3.py  fix_num_nonzeros.py  fix_printf.py  fix_printf2.py  fix_printf3.py  ft_compare.c  ft_test.c  ft_test_fmt.c  gen_dd_matrices.py  gen_dual.py  gen_fix.py  gen_sweep.py  gen_sweep2.py  gen_sweep3.py  makefile  makefile.pub  md_final_v2.py  md_out.md  mix_test.sh  par_interp_clsfix.c  (+21 more)
jxpamg-basic-D/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  ci_file  log.svn  makefile.pub  spgemm_adapter.c  spgemm_adapter.h  test.sh
jxpamg-basic-D/beidoublasgemm/: beidoublas_spgemm.c  beidoublas_spgemm.h
jxpamg-basic-D/csrc/amg/: amg_linklist.c  par_amg.c  par_amg_cparam.c  par_amg_setup.c  par_amg_solve.c  par_asetup.c  par_coarsen_cljp.c  par_coarsen_cljp_ai.c  par_coarsen_falgout.c  par_coarsen_falgout_ai.c  par_coarsen_hmis.c  par_coarsen_hmis_ai.c  par_coarsen_pmis.c  par_coarsen_pmis_ai.c  par_coarsen_pmis_ai_bak20131204.c  par_coarsen_rcljp.c  par_coarsen_rrs0.c  par_coarsen_ruge.c  par_coarsen_ruge_ai.c  par_coarsen_xml.c  par_csolver.bak2c  par_csolver.bakc  par_csolver.c  par_cycle.c  par_gesolver.c  par_indepset.c  par_indepsetrlx.c  par_interp_0.c  par_interp_100.c  par_interp_200.c  par_interp_3.c  par_interp_4.c  par_interp_6.c  par_interp_7.c  par_interp_8.c  par_itersolver.c  par_itersolver_ai.c  par_measure_ai.c  par_relax.c  par_relax_ai.c  (+6 more)
jxpamg-basic-D/csrc/blockprec/: blockprec.c
jxpamg-basic-D/csrc/combined/: amg_euclid.c  amg_ilu.c  combined.c  csr_matrix.c  par_csr_matrix.c
jxpamg-basic-D/csrc/communication/: hpcsr_comm.c  new_commpkg.c  par_csr_com.c
jxpamg-basic-D/csrc/diagscale/: diagscale.c
jxpamg-basic-D/csrc/euclid/: blas_dh.c  euclid_apply_dh.c  euclid_dh.c  external_rows_dh.c  factor_dh.c  get_row_dh.c  global_objects_dh.c  hash_dh.c  hash_i_dh.c  ilu_mpi_bj_dh.c  ilu_mpi_pilu_dh.c  ilu_seq_dh.c  io_dh.c  krylov_dh.c  mat_dh.c  mat_gen_fd_dh.c  mat_private_dh.c  mem_dh.c  numbering_dh.c  parcsr_euclid.c  parser_dh.c  shell_sort_dh.c  sig_dh.c  sorted_list_dh.c  sorted_set_dh.c  subdomain_graph_dh.c  time_log_dh.c  timer_dh.c  vec_dh.c
jxpamg-basic-D/csrc/hx/: l1norm.c
jxpamg-basic-D/csrc/ilu/: csr_matrix.c  decomposition.c  grid.c  ilu.c  ilucycle.c  ilusetup.c  par_csr_matrix.c  par_ilu.c  par_ilu_setup.c  par_ilu_setup_zn.c.disabled  par_ilu_solve.c  par_ilu_solve_zn.c.disabled  par_vector.c  parcsr_ilu_zn.c.disabled  vector.c
jxpamg-basic-D/csrc/krylov/: krylov.c  pbicgstab.c  pcg.c  pcogmres.c  pflexgmres.c  pgmres.c
jxpamg-basic-D/csrc/mat_vec_data/: hpcsr_matrix.c  hpcsr_matrix.c-bp  hpcsr_vector.c  ij_matrix.c  ij_vector.c  par_csr_matrix.c  par_vector.c  seq_csr_ls.c  seq_csr_matrix.c  seq_vector.c
jxpamg-basic-D/csrc/multils/: amg.c  ilu.c  krylov.c  matvec.c  par_gls2ls.c  par_glsdata.c  par_lsdata.c  par_mllssolve.c  par_util.c  precond.c  smoother.c  tool.c
jxpamg-basic-D/csrc/operation/blas/: dasum.c  daxpy.c  dcopy.c  ddot.c  dgemm.c  dgemv.c  dger.c  dnrm2.c  drot.c  dscal.c  dswap.c  dsymm.c  dsymv.c  dsyr2.c  dsyr2k.c  dsyrk.c  dtrmm.c  dtrmv.c  dtrsm.c  dtrsv.c  f2c.c  f2c.h  idamax.c  jx_blas.h  lsame.c  xerbla.c
jxpamg-basic-D/csrc/operation/lapack/: dbdsqr.c  dgebd2.c  dgebrd.c  dgelq2.c  dgelqf.c  dgels.c  dgeqr2.c  dgeqrf.c  dgesvd.c  dgetf2.c  dgetrf.c  dgetri.c  dgetrs.c  dlabad.c  (+60 more)
jxpamg-basic-D/csrc/utilities/: array.c  complex.c  error.c  exchange.c  intersect.c  jx_env_variable.c  memory.c  mpistubs.c  prefixsum.c  printf.c  random.c  search.c  set.c  sort.c  thread.c  timer.c
jxpamg-basic-D/docs/: BJ_ILU0_optimization_and_lrc_design.md  ILU_GMRES_learning_notes.md
jxpamg-basic-D/example/: mysub.pbs  par_laplace.c  readme  solver_laplace.c  solver_strong.c  solver_strong_ij.c  solver_weak.c
jxpamg-basic-D/include/: jx_apctl.h  jx_asetup.h  jx_blas2.h  jx_blockprec.h  jx_combined.h  jx_diagscale.h  jx_env_variable.h  jx_euclid.h  jx_hpcsr.h  jx_hx.h  jx_ilu.h  jx_krylov.h  jx_lapack2.h  jx_multils.h  jx_mv.h  jx_pamg.h  jx_smp_forloop.h  jx_util.h
jxpamg-basic-D/scripts/: CPack.STGZ_Header.sh.in  autobuild.sh  get_svn_reversion.sh
(+380 files in other folders)
